# python-play

./: pyproject.toml
python_play/: aula14.py
